@@ -44,6 +44,7 @@ import java.util.jar.JarFile;
 import java.util.jar.Manifest;
 
 import com.sun.tools.javac.util.Context;
+import java.nio.file.Paths;
 
 /**
  * Get meta-info about files. Default direct (non-caching) implementation.
@@ -117,7 +118,7 @@ public class FSInfo {
                 try {
                     URL url = tryResolveFile(base, elt);
                     if (url != null) {
-                        list.add(Path.of(url.toURI()));
+                        list.add(Paths.get(url.toURI()));
                     }
                 } catch (URISyntaxException ex) {
                     throw new IOException(ex);
